Bug 302907 - crash after not importing a project
Summary: crash after not importing a project
Status: RESOLVED FIXED
Alias: None
Product: Rocs
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Rocs Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-02 16:34 UTC by Jaime Torres
Modified: 2012-07-02 17:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jaime Torres 2012-07-02 16:34:01 UTC
Application: rocs (1.6.95)
KDE Platform Version: 4.8.4 (4.8.4) (Compiled from sources)
Qt Version: 4.8.2
Operating System: Linux 3.4.2-29-desktop x86_64
Distribution: "openSUSE 12.2 Beta 2 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
Open rocks
File->Import Project
Cancel
Cancel
Close the window (using window close button)
crash.

The crash can be reproduced every time.

-- Backtrace:
Application: Rocs (rocs), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f224b0eb880 (LWP 18264))]

Thread 2 (Thread 0x7f223d37c700 (LWP 18265)):
#0  0x00007f2259d5110f in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f2251f916d4 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f2251f917f4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f225ac6d28e in QEventDispatcherGlib::processEvents (this=0x7f223c40e040, flags=...) at /g/kdegit/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f225ac3a24f in QEventLoop::processEvents (this=this@entry=0x7f223d37bce0, flags=...) at /g/kdegit/qt/src/corelib/kernel/qeventloop.cpp:149
#5  0x00007f225ac3a508 in QEventLoop::exec (this=0x7f223d37bce0, flags=...) at /g/kdegit/qt/src/corelib/kernel/qeventloop.cpp:204
#6  0x00007f225ab3218d in QThread::exec (this=<optimized out>) at /g/kdegit/qt/src/corelib/thread/qthread.cpp:501
#7  0x00007f225ac194d3 in QInotifyFileSystemWatcherEngine::run (this=0x7f223de228b0) at /g/kdegit/qt/src/corelib/io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f225ab34e78 in QThreadPrivate::start (arg=0x7f223de228b0) at /g/kdegit/qt/src/corelib/thread/qthread_unix.cpp:307
#9  0x00007f225a834e0e in start_thread (arg=0x7f223d37c700) at pthread_create.c:305
#10 0x00007f2259d5928d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f224b0eb880 (LWP 18264)):
[KCrash Handler]
#6  Document::isModified (this=0x0) at /g/kdegit/kdeedu/rocs/src/Core/Document.cpp:456
#7  0x0000000000434626 in MainWindow::saveIfChanged (this=0x7f224ab07cc0) at /g/kdegit/kdeedu/rocs/src/Interface/MainWindow.cpp:946
#8  0x00000000004347c9 in MainWindow::closeEvent (this=<optimized out>, event=0x7fffa4a48530) at /g/kdegit/kdeedu/rocs/src/Interface/MainWindow.cpp:158
#9  0x00007f225b254cd1 in QWidget::event (this=0x7f224ab07cc0, event=0x7fffa4a48530) at /g/kdegit/qt/src/gui/kernel/qwidget.cpp:8529
#10 0x00007f225b675693 in QMainWindow::event (this=0x7f224ab07cc0, event=0x7fffa4a48530) at /g/kdegit/qt/src/gui/widgets/qmainwindow.cpp:1478
#11 0x00007f225ed8d216 in KXmlGuiWindow::event (this=0x7f224ab07cc0, ev=0x7fffa4a48530) at /g/kdegit/kdelibs/kdeui/xmlgui/kxmlguiwindow.cpp:126
#12 0x00007f225b1fc211 in QApplicationPrivate::notify_helper (this=this@entry=0x7f224a87a380, receiver=receiver@entry=0x7f224ab07cc0, e=e@entry=0x7fffa4a48530) at /g/kdegit/qt/src/gui/kernel/qapplication.cpp:4551
#13 0x00007f225b2012b9 in QApplication::notify (this=0x7fffa4a49050, receiver=0x7f224ab07cc0, e=0x7fffa4a48530) at /g/kdegit/qt/src/gui/kernel/qapplication.cpp:4412
#14 0x00007f225ec8de4e in KApplication::notify (this=0x7fffa4a49050, receiver=0x7f224ab07cc0, event=0x7fffa4a48530) at /g/kdegit/kdelibs/kdeui/kernel/kapplication.cpp:311
#15 0x00007f225ac3bced in QCoreApplication::notifyInternal (this=0x7fffa4a49050, receiver=0x7f224ab07cc0, event=0x7fffa4a48530) at /g/kdegit/qt/src/corelib/kernel/qcoreapplication.cpp:915
#16 0x00007f225b24e85d in QCoreApplication::sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../../../kdegit/qt/src/corelib/kernel/qcoreapplication.h:231
#17 QWidgetPrivate::close_helper (this=0x7f224a811000, mode=QWidgetPrivate::CloseWithSpontaneousEvent) at /g/kdegit/qt/src/gui/kernel/qwidget.cpp:7937
#18 0x00007f225b28535f in QApplication::x11ClientMessage (passive_only=<optimized out>, event=<optimized out>, w=0x7f224ab07cc0, this=<optimized out>) at /g/kdegit/qt/src/gui/kernel/qapplication_x11.cpp:3139
#19 QApplication::x11ClientMessage (this=<optimized out>, w=0x7f224ab07cc0, event=<optimized out>, passive_only=<optimized out>) at /g/kdegit/qt/src/gui/kernel/qapplication_x11.cpp:3129
#20 0x00007f225b283b80 in QApplication::x11ProcessEvent (this=0x7fffa4a49050, event=0x7fffa4a48af0) at /g/kdegit/qt/src/gui/kernel/qapplication_x11.cpp:3764
#21 0x00007f225b2aaab2 in x11EventSourceDispatch (s=0x7f224a8bc600, callback=0x0, user_data=0x0) at /g/kdegit/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:146
#22 0x00007f2251f91405 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#23 0x00007f2251f91738 in ?? () from /usr/lib64/libglib-2.0.so.0
#24 0x00007f2251f917f4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#25 0x00007f225ac6d264 in QEventDispatcherGlib::processEvents (this=0x7f224a81b970, flags=...) at /g/kdegit/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:424
#26 0x00007f225b2aa766 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at /g/kdegit/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#27 0x00007f225ac3a24f in QEventLoop::processEvents (this=this@entry=0x7fffa4a48eb0, flags=...) at /g/kdegit/qt/src/corelib/kernel/qeventloop.cpp:149
#28 0x00007f225ac3a508 in QEventLoop::exec (this=0x7fffa4a48eb0, flags=...) at /g/kdegit/qt/src/corelib/kernel/qeventloop.cpp:204
#29 0x00007f225ac3fa88 in QCoreApplication::exec () at /g/kdegit/qt/src/corelib/kernel/qcoreapplication.cpp:1187
#30 0x000000000041af47 in main (argc=5, argv=0x7fffa4a49188) at /g/kdegit/kdeedu/rocs/src/Main.cpp:63

Reported using DrKonqi
Comment 1 Andreas Cord-Landwehr 2012-07-02 17:12:02 UTC
Git commit 1561f32a640ce357460fef36b417fa1bc8e4725e by Andreas Cord-Landwehr.
Committed on 02/07/2012 at 19:07.
Pushed by cordlandwehr into branch 'KDE/4.9'.

Fix crash when project import is cancelled.

Import function now guarantees on exit the existence of a project,
graph document, and script document.
FIXED-IN: 1.7
(cherry picked from commit 13c0474a3b0d2b9299e10fe91dabfd69f7445d1c)

M  +13   -6    src/Interface/MainWindow.cpp
M  +6    -0    src/Interface/MainWindow.h

http://commits.kde.org/rocs/1561f32a640ce357460fef36b417fa1bc8e4725e
Comment 2 Andreas Cord-Landwehr 2012-07-02 17:12:21 UTC
Git commit 13c0474a3b0d2b9299e10fe91dabfd69f7445d1c by Andreas Cord-Landwehr.
Committed on 02/07/2012 at 19:07.
Pushed by cordlandwehr into branch 'master'.

Fix crash when project import is cancelled.

Import function now guarantees on exit the existence of a project,
graph document, and script document.
FIXED-IN: 1.7

M  +13   -6    src/Interface/MainWindow.cpp
M  +6    -0    src/Interface/MainWindow.h

http://commits.kde.org/rocs/13c0474a3b0d2b9299e10fe91dabfd69f7445d1c