Fix crash when project import is cancelled.

Import function now guarantees on exit the existence of a project,
graph document, and script document.

BUG: 302907
FIXED-IN: 1.7